--- a/.github/workflows/scheduled-data-collection.yml
+++ b/.github/workflows/scheduled-data-collection.yml
@@ -3,20 +3,20 @@ name: Scheduled Data Collection
 
 on:
   schedule:
-    # MTA Morning Rush: 7-9 AM EST = 12-2 PM UTC
-    - cron: '0 12-14 * * 1-5'    # Top of each hour
-    - cron: '15 12-14 * * 1-5'   # Quarter past
-    - cron: '30 12-14 * * 1-5'   # Half past  
-    - cron: '45 12-14 * * 1-5'   # Quarter to
+    # MTA Morning Rush: 7-9 AM EDT = 11 AM-1 PM UTC (summer time)
+    - cron: '0 11-13 * * 1-5'    # Top of each hour
+    - cron: '15 11-13 * * 1-5'   # Quarter past
+    - cron: '30 11-13 * * 1-5'   # Half past  
+    - cron: '45 11-13 * * 1-5'   # Quarter to
     
-    # MTA Evening Rush: 5-7 PM EST = 10 PM-12 AM UTC
-    - cron: '0 22-24 * * 1-5'    # Top of each hour
-    - cron: '15 22-24 * * 1-5'   # Quarter past
-    - cron: '30 22-24 * * 1-5'   # Half past
-    - cron: '45 22-24 * * 1-5'   # Quarter to
+    # MTA Evening Rush: 5-7 PM EDT = 9-11 PM UTC (summer time)
+    - cron: '0 21-23 * * 1-5'    # Top of each hour
+    - cron: '15 21-23 * * 1-5'   # Quarter past
+    - cron: '30 21-23 * * 1-5'   # Half past
+    - cron: '45 21-23 * * 1-5'   # Quarter to
     
-    # Weather: Weekdays at 11:50 PM EST = 4:50 AM UTC next day
-    - cron: '50 4 * * 2-6'       # Tue-Sat at 4:50 AM UTC (Mon-Fri 11:50 PM EST)
+    # Weather: Weekdays at 11:50 PM EDT = 3:50 AM UTC next day (summer time)
+    - cron: '50 3 * * 2-6'       # Tue-Sat at 3:50 AM UTC (Mon-Fri 11:50 PM EDT)
 
 jobs:
   collect-mta-data:
