--- a/requirements.txt
+++ b/requirements.txt
@@ -128,3 +128,8 @@ wcwidth==0.2.13
 webcolors==24.11.1
 webencodings==0.5.1
 websocket-client==1.8.0
+
+pip~=25.1.1
+wheel~=0.41.2
+setuptools~=68.2.0
+django-scheduler~=0.10.1
